Changeset including: * SMS configuration screen * Re-utilization of the dialog for adding e-mails * New strings

--- a/Power Notifier/res/values/strings.xml
+++ b/Power Notifier/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="smtp_port">SMTP port</string>
     <string name="smtp_user">Username</string>
     <string name="delete">Delete</string>
+    <string name="sms_phone">Phone number</string>
 </resources>
